Adding new functionalities

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <style type="text/css">
         body{
             height:1000px;
-            background-image:url(sign.png);
+            background-image:url(images/sign.png);
             
         }
     	.opaque-navbar {
@@ -51,7 +51,7 @@ color:red !important;
         <!-- Menu Items -->
         <div class="collapse navbar-collapse" id="mainNavBar">
             <ul class="nav navbar-nav">
-                <li><a href="#" style="color: steelblue">Home</a></li>
+                <li><a href="homepage.php" style="color: steelblue">Home</a></li>
                 <li><a href="#" style="color:steelblue">About</a></li>
                 <li><a href="#" style="color:steelblue">Contact</a></li>
           </ul>
