Added quiz evaluation and feedback page

--- a/feedback.html
+++ b/feedback.html
@@ -51,14 +51,14 @@ textarea {
         <!-- Menu Items -->
         <div class="collapse navbar-collapse" id="mainNavBar">
             <ul class="nav navbar-nav">
-                <li><a href="#" >Home</a></li>
+                <li><a href="homepage.php" >Home</a></li>
                 <li><a href="#" >About</a></li>
                 <li><a href="#" >Contact</a></li>
           </ul>
 
      <ul class="nav navbar-nav pull-right">
-      <li><a href="#"  id="k">Sign up</a></li>
-      <li><a href="#">Log in</a></li>
+      <li><a href="signin.html">Sign up</a></li>
+      <li><a href="login.html">Log in</a></li>
       </ul>
     </div>
     </div>
